--- a/src/app/Components/Footer/Footer.module.css
+++ b/src/app/Components/Footer/Footer.module.css
@@ -1,5 +1,7 @@
 .container {
-  padding: 0rem 8rem 1rem;
+  background-color: #131311;
+  height: 300px;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .inner {
@@ -9,6 +11,13 @@
   justify-content: space-between;
   align-items: center;
   align-content: stretch;
+
+  position: fixed;
+  width: 100%;
+  height: 300px;
+  bottom: 0;
+  left: 0;
+  padding: 0rem 8rem 1rem;
 }
 
 .nav {
@@ -19,7 +28,7 @@
 .logo h1,
 .company p,
 .madeBy p {
-  color: var(--color-black);
+  color: var(--color-white);
 }
 
 .logo h1 {
@@ -28,13 +37,21 @@
 
 @media only screen and (max-width: 640px) {
   .container {
-    padding: 1rem 1rem 2rem;
+    height: 300px;
   }
   .inner {
-    flex-wrap: wrap;
+    height: 300px;
+    flex-direction: column;
+    padding: 1rem 1rem 2rem;
     align-items: flex-start;
   }
   .madeBy {
     margin-top: 2rem;
+  }
+
+  .nav {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
   }
 }
