--- a/src/app/HomeSections/Hero/Hero.module.css
+++ b/src/app/HomeSections/Hero/Hero.module.css
@@ -1,9 +1,7 @@
 .container {
   position: relative;
   width: 100vw;
-  height: 100vh;
-  /*  height: 100dvh;
-  min-height: 100svh; */
+  height: 100dvh;
   overflow: hidden;
   background-color: var(--color-black, #000);
   display: flex;
