--- a/src/app/HomeSections/BoatSection/BoatSection.module.css
+++ b/src/app/HomeSections/BoatSection/BoatSection.module.css
@@ -45,3 +45,10 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media (max-width: 640px) {
+  .content {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
