--- a/src/app/HomeSections/BoatSection/BoatSection.module.css
+++ b/src/app/HomeSections/BoatSection/BoatSection.module.css
@@ -1,8 +1,15 @@
 .section {
   height: 100vh;
-  background: var(--color-black);
+  background: #888;
   position: relative;
   overflow: hidden;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  z-index: 1;
 }
 
 .imageWrapper {
@@ -15,6 +22,7 @@
   border-radius: 100vh;
   transform: translate(-50%, -50%);
   overflow: hidden;
+  z-index: 0;
 }
 
 .image {
@@ -23,27 +31,23 @@
 }
 
 .content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) translateY(150%);
-  text-align: center;
-  color: white;
-  opacity: 0;
   z-index: 2;
+  opacity: 0;
+  transform: translateY(100px);
 }
 
 .title {
-  font-weight: 600;
+  font-size: 3rem;
   margin-bottom: 1rem;
+  color: white;
 }
 
 .subTitle {
   font-size: 1.2rem;
   margin-bottom: 2rem;
   max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-inline: auto;
+  color: white;
 }
 
 @media (max-width: 640px) {
